--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -51,12 +51,12 @@
                 <br>
                 <div class="video-container">
                     <video id="videoPlayer" width="800" height="450" controls>
-                        <source src="video1.mp4" type="video/mp4">
+                        <source src="wwth.mp4" type="video/mp4">
                     </video>
                     <div class="video-buttons">
                         <button onclick="changeVideo('wwth.mp4')">Who were the Hittites?</button>
-                        <button onclick="changeVideo('video2.mp4')">Video 2</button>
-                        <button onclick="changeVideo('video3.mp4')">Video 3</button>
+                        <button onclick="changeVideo('rfh.mp4')">The rise and fall of the Hittites</button>
+                        <button onclick="changeVideo('tw.mp4')">The Hittites in the Trojan War</button>
                         <button onclick="changeVideo('video4.mp4')">Video 4</button>
                         <button onclick="changeVideo('video5.mp4')">Video 5</button>
                         <button onclick="changeVideo('video6.mp4')">Video 6</button>
