--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -50,8 +50,8 @@
                 <br>
                 <br>
                 <div class="video-container">
-                    <video id="videoPlayer" width="800" height="450" controls>
-                        <source src="wwth.mp4" type="video/mp4">
+                    <video id="videoPlayer" width="800" height="450" controls autoplay>
+                        <source src="...mp4" type="video/mp4">
                     </video>
                     <div class="video-buttons">
                         <button onclick="changeVideo('wwth.mp4')">Who were the Hittites?</button>
