--- a/Final/Videos.html
+++ b/Final/Videos.html
@@ -57,10 +57,7 @@
                         <button onclick="changeVideo('wwth.mp4')">Who were the Hittites?</button>
                         <button onclick="changeVideo('rfh.mp4')">The rise and fall of the Hittites</button>
                         <button onclick="changeVideo('tw.mp4')">The Hittites in the Trojan War</button>
-                        <button onclick="changeVideo('video4.mp4')">Video 4</button>
-                        <button onclick="changeVideo('video5.mp4')">Video 5</button>
-                        <button onclick="changeVideo('video6.mp4')">Video 6</button>
-                        <button onclick="changeVideo('video7.mp4')">Video 7</button>
+                        <button onclick="changeVideo('ch.mp4')">Complete history of the Hittites 4</button>
                     </div>
                 </div>  
            </div>
